--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.29.1",
+		"@playwright/test": "^1.29.2",
 		"@sveltejs/adapter-auto": "^1.0.0",
-		"@sveltejs/kit": "^1.0.1",
-		"@svelteuidev/composables": "^0.7.7",
-		"@svelteuidev/core": "^0.7.7",
+		"@sveltejs/kit": "^1.0.7",
+		"@svelteuidev/composables": "file:..\\..\\svelteui\\packages\\svelteui-composables\\package",
+		"@svelteuidev/core": "file:..\\..\\svelteui\\packages\\svelteui-core\\package",
 		"@typescript-eslint/eslint-plugin": "^5.48.0",
 		"@typescript-eslint/parser": "^5.48.0",
 		"autoprefixer": "^10.4.13",
@@ -26,9 +26,9 @@
 		"eslint": "^8.31.0",
 		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"postcss": "^8.4.20",
+		"postcss": "^8.4.21",
 		"postcss-load-config": "^4.0.1",
-		"prettier": "^2.8.1",
+		"prettier": "^2.8.2",
 		"prettier-plugin-svelte": "^2.9.0",
 		"radix-icons-svelte": "^1.2.1",
 		"svelte": "^3.55.0",
