--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
 	},
 	"dependencies": {
 		"@svelteuidev/composables": "file:..\\..\\svelteui\\packages\\svelteui-composables\\package",
-		"@svelteuidev/core": "file:..\\..\\svelteui\\packages\\svelteui-core\\package"
+		"@svelteuidev/core": "file:..\\..\\svelteui\\packages\\svelteui-core\\package",
+		"better-sqlite3": "^8.0.1",
+		"kysely": "^0.23.3"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.29.2",
 		"@sveltejs/adapter-auto": "^1.0.0",
 		"@sveltejs/kit": "^1.0.7",
+		"@types/better-sqlite3": "^7.6.3",
 		"@typescript-eslint/eslint-plugin": "^5.48.0",
 		"@typescript-eslint/parser": "^5.48.0",
 		"autoprefixer": "^10.4.13",
