--- a/package.json
+++ b/package.json
@@ -22,15 +22,18 @@
 	"devDependencies": {
 		"@playwright/test": "^1.29.2",
 		"@sveltejs/adapter-auto": "^1.0.0",
-		"@sveltejs/kit": "^1.0.7",
+		"@sveltejs/kit": "^1.0.10",
 		"@types/better-sqlite3": "^7.6.3",
-		"@typescript-eslint/eslint-plugin": "^5.48.0",
-		"@typescript-eslint/parser": "^5.48.0",
+		"@types/node": "^18.11.18",
+		"@typescript-eslint/eslint-plugin": "^5.48.1",
+		"@typescript-eslint/parser": "^5.48.1",
 		"autoprefixer": "^10.4.13",
 		"daisyui": "^2.46.1",
 		"eslint": "^8.31.0",
 		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"kysely-codegen": "^0.9.0",
+		"kysely-migration-cli": "^0.1.1",
 		"postcss": "^8.4.21",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.2",
@@ -43,6 +46,7 @@
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.4",
 		"vite": "^4.0.4",
+		"vite-node": "^0.26.3",
 		"vitest": "^0.25.8"
 	},
 	"type": "module"
