--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"test:unit": "vitest",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"format": "prettier --plugin-search-dir . --write .",
+		"codegen": "kysely-codegen --out-file ./src/lib/types/data.d.ts"
 	},
 	"dependencies": {
 		"@svelteuidev/composables": "file:..\\..\\svelteui\\packages\\svelteui-composables\\package",
 		"@svelteuidev/core": "file:..\\..\\svelteui\\packages\\svelteui-core\\package",
+		"@trpc/client": "^10.8.1",
+		"@trpc/server": "^10.8.1",
 		"better-sqlite3": "^8.0.1",
-		"kysely": "^0.23.3"
+		"kysely": "^0.23.3",
+		"trpc-sveltekit": "^3.2.4",
+		"zod": "^3.20.2"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.29.2",
