--- a/package.json
+++ b/package.json
@@ -26,15 +26,15 @@
 		"zod": "^3.20.2"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.29.2",
+		"@playwright/test": "^1.30.0",
 		"@sveltejs/adapter-auto": "^1.0.2",
-		"@sveltejs/kit": "^1.2.2",
+		"@sveltejs/kit": "^1.3.1",
 		"@types/better-sqlite3": "^7.6.3",
 		"@types/node": "^18.11.18",
-		"@typescript-eslint/eslint-plugin": "^5.48.2",
-		"@typescript-eslint/parser": "^5.48.2",
+		"@typescript-eslint/eslint-plugin": "^5.49.0",
+		"@typescript-eslint/parser": "^5.49.0",
 		"autoprefixer": "^10.4.13",
-		"daisyui": "^2.47.0",
+		"daisyui": "^2.49.0",
 		"eslint": "^8.32.0",
 		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-svelte3": "^4.0.0",
@@ -46,9 +46,10 @@
 		"radix-icons-svelte": "^1.2.1",
 		"svelte": "^3.55.1",
 		"svelte-check": "^2.10.3",
+		"svelte-dnd-action": "^0.9.22",
 		"svelte-preprocess": "^4.10.7",
 		"tailwindcss": "^3.2.4",
-		"tslib": "^2.4.1",
+		"tslib": "^2.5.0",
 		"typescript": "^4.9.4",
 		"vite": "^4.0.4",
 		"vite-node": "^0.26.3",
