chore: Add vscode task for running project

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,6 @@
 		"package.json"
 	],
 	"cSpell.words": ["dndzone", "Someplice"],
-	"conventionalCommits.scopes": ["deps"]
+	"conventionalCommits.scopes": ["deps"],
+	"npm.packageManager": "pnpm"
 }
