--- a/package.json
+++ b/package.json
@@ -22,19 +22,20 @@
 		"@trpc/server": "^10.9.1",
 		"better-sqlite3": "^8.0.1",
 		"kysely": "^0.23.4",
-		"trpc-sveltekit": "^3.2.5",
+		"trpc-sveltekit": "^3.2.7",
 		"zod": "^3.20.2"
 	},
 	"devDependencies": {
+		"@iconify-json/lucide": "^1.1.57",
 		"@playwright/test": "^1.30.0",
 		"@sveltejs/adapter-auto": "^1.0.2",
-		"@sveltejs/kit": "^1.3.6",
+		"@sveltejs/kit": "^1.3.9",
 		"@types/better-sqlite3": "^7.6.3",
 		"@types/node": "^18.11.18",
 		"@typescript-eslint/eslint-plugin": "^5.50.0",
 		"@typescript-eslint/parser": "^5.50.0",
 		"autoprefixer": "^10.4.13",
-		"daisyui": "^2.49.0",
+		"daisyui": "^2.50.0",
 		"eslint": "^8.33.0",
 		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-svelte3": "^4.0.0",
@@ -43,7 +44,6 @@
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.3",
 		"prettier-plugin-svelte": "^2.9.0",
-		"radix-icons-svelte": "^1.2.1",
 		"svelte": "^3.55.1",
 		"svelte-check": "^2.10.3",
 		"svelte-dnd-action": "^0.9.22",
@@ -51,6 +51,7 @@
 		"tailwindcss": "^3.2.4",
 		"tslib": "^2.5.0",
 		"typescript": "^4.9.5",
+		"unplugin-icons": "^0.15.2",
 		"vite": "^4.0.4",
 		"vite-node": "^0.26.3",
 		"vitest": "^0.25.8"
