--- a/package.json
+++ b/package.json
@@ -26,16 +26,17 @@
 		"zod": "^3.20.6"
 	},
 	"devDependencies": {
-		"@iconify-json/lucide": "^1.1.64",
+		"@iconify-json/lucide": "^1.1.65",
 		"@playwright/test": "^1.31.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.8.3",
+		"@sveltejs/adapter-node": "^1.2.0",
+		"@sveltejs/kit": "^1.8.5",
 		"@types/better-sqlite3": "^7.6.3",
 		"@types/node": "^18.14.1",
 		"@typescript-eslint/eslint-plugin": "^5.53.0",
 		"@typescript-eslint/parser": "^5.53.0",
 		"autoprefixer": "^10.4.13",
-		"daisyui": "^2.51.0",
+		"daisyui": "^2.51.1",
 		"eslint": "^8.34.0",
 		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-svelte3": "^4.0.0",
@@ -53,8 +54,8 @@
 		"typescript": "^4.9.5",
 		"unplugin-icons": "^0.15.3",
 		"vite": "^4.1.4",
-		"vite-node": "^0.28.5",
-		"vitest": "^0.28.5"
+		"vite-node": "^0.29.1",
+		"vitest": "^0.29.1"
 	},
 	"type": "module"
 }
