Update README, add Dockerfile

--- a/.prettierignore
+++ b/.prettierignore
@@ -13,6 +13,7 @@ LICENSE
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 *.sqlite
+Dockerfile
 
 # Ignore files for PNPM, NPM and YARN
 pnpm-lock.yaml
