--- a/package.json
+++ b/package.json
@@ -12,32 +12,32 @@
 		"test:unit": "vitest",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-		"db:codegen": "kysely-codegen --out-file ./src/lib/types/data.d.ts",
+		"db:codegen": "kysely-codegen --out-file ./src/lib/types/data.d.ts && prettier --plugin-search-dir . --write ./src/lib/types/data.d.ts",
 		"db:migrate": "vite-node ./src/lib/db/migrate-to-latest.ts"
 	},
 	"dependencies": {
 		"@svelteuidev/composables": "^0.10.0",
 		"@svelteuidev/core": "^0.10.0",
-		"@trpc/client": "^10.14.1",
-		"@trpc/server": "^10.14.1",
+		"@trpc/client": "^10.16.0",
+		"@trpc/server": "^10.16.0",
 		"better-sqlite3": "^8.2.0",
 		"kysely": "^0.23.5",
-		"trpc-sveltekit": "^3.4.2",
+		"trpc-sveltekit": "^3.4.7",
+		"vite-node": "^0.29.2",
 		"zod": "^3.21.4"
 	},
 	"devDependencies": {
-		"@iconify-json/lucide": "^1.1.69",
+		"@iconify-json/lucide": "^1.1.70",
 		"@playwright/test": "^1.31.2",
-		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-node": "^1.2.2",
 		"@sveltejs/kit": "^1.11.0",
 		"@types/better-sqlite3": "^7.6.3",
-		"@types/node": "^18.15.0",
-		"@typescript-eslint/eslint-plugin": "^5.54.1",
-		"@typescript-eslint/parser": "^5.54.1",
+		"@types/node": "^18.15.2",
+		"@typescript-eslint/eslint-plugin": "^5.55.0",
+		"@typescript-eslint/parser": "^5.55.0",
 		"autoprefixer": "^10.4.14",
 		"daisyui": "^2.51.3",
-		"eslint": "^8.35.0",
+		"eslint": "^8.36.0",
 		"eslint-config-prettier": "^8.7.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"kysely-codegen": "^0.9.0",
@@ -46,7 +46,7 @@
 		"prettier": "^2.8.4",
 		"prettier-plugin-svelte": "^2.9.0",
 		"svelte": "^3.56.0",
-		"svelte-check": "^3.1.0",
+		"svelte-check": "^3.1.4",
 		"svelte-dnd-action": "^0.9.22",
 		"svelte-preprocess": "^4.10.7",
 		"tailwindcss": "^3.2.7",
@@ -54,7 +54,6 @@
 		"typescript": "^4.9.5",
 		"unplugin-icons": "^0.15.3",
 		"vite": "^4.1.4",
-		"vite-node": "^0.29.2",
 		"vitest": "^0.29.2"
 	},
 	"type": "module"
