--- a/.prettierignore
+++ b/.prettierignore
@@ -14,6 +14,7 @@ vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 *.sqlite
 Dockerfile
+.node-version
 
 # Ignore files for PNPM, NPM and YARN
 pnpm-lock.yaml
