--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
 	"dependencies": {
 		"@svelteuidev/composables": "^0.10.0",
 		"@svelteuidev/core": "^0.10.0",
-		"@trpc/client": "^10.17.0",
-		"@trpc/server": "^10.17.0",
+		"@trpc/client": "^10.18.0",
+		"@trpc/server": "^10.18.0",
 		"better-sqlite3": "^8.2.0",
 		"kysely": "^0.23.5",
 		"trpc-sveltekit": "^3.5.1",
@@ -28,24 +28,25 @@
 		"zod": "^3.21.4"
 	},
 	"devDependencies": {
-		"@iconify-json/lucide": "^1.1.71",
-		"@playwright/test": "^1.31.2",
+		"@iconify-json/lucide": "^1.1.72",
+		"@playwright/test": "^1.32.0",
 		"@sveltejs/adapter-node": "^1.2.3",
 		"@sveltejs/kit": "^1.13.0",
 		"@types/better-sqlite3": "^7.6.3",
-		"@types/node": "^18.15.4",
+		"@types/node": "^18.15.5",
 		"@typescript-eslint/eslint-plugin": "^5.56.0",
 		"@typescript-eslint/parser": "^5.56.0",
+		"@vite-pwa/sveltekit": "^0.2.0",
 		"autoprefixer": "^10.4.14",
-		"daisyui": "^2.51.4",
+		"daisyui": "^2.51.5",
 		"eslint": "^8.36.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"kysely-codegen": "^0.9.0",
 		"postcss": "^8.4.21",
 		"postcss-load-config": "^4.0.1",
-		"prettier": "^2.8.5",
-		"prettier-plugin-svelte": "^2.9.0",
+		"prettier": "^2.8.6",
+		"prettier-plugin-svelte": "^2.10.0",
 		"svelte": "^3.57.0",
 		"svelte-check": "^3.1.4",
 		"svelte-dnd-action": "^0.9.22",
@@ -55,6 +56,7 @@
 		"typescript": "^5.0.2",
 		"unplugin-icons": "^0.15.3",
 		"vite": "^4.2.1",
+		"vite-plugin-pwa": "^0.14.6",
 		"vitest": "^0.29.7"
 	},
 	"type": "module"
