--- a/config/.prettierignore
+++ b/config/.prettierignore
@@ -1,14 +1,15 @@
 .DS_Store
 node_modules
-/build
-/.svelte-kit
-/package
+../build
+../.svelte-kit
+../package
 .env
 .env.*
 !.env.example
 LICENSE
 *.md
 .prettierignore
+.eslintignore
 .DS_Store
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
