chore(deps): update svelte to v4

--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
 		"db:migrate:single": "vite-node ./src/lib/db/migrate-to-latest.ts --migration"
 	},
 	"dependencies": {
-		"@ngneat/falso": "^6.4.0",
 		"@svelteuidev/composables": "^0.13.0",
 		"@svelteuidev/core": "^0.13.0",
 		"@trpc/client": "^10.32.0",
@@ -32,6 +31,7 @@
 		"@commitlint/cli": "^17.6.6",
 		"@commitlint/config-conventional": "^17.6.6",
 		"@iconify-json/lucide": "^1.1.105",
+		"@ngneat/falso": "^6.4.0",
 		"@playwright/test": "^1.35.1",
 		"@sveltejs/adapter-node": "^1.2.4",
 		"@sveltejs/kit": "^1.20.5",
@@ -44,13 +44,13 @@
 		"daisyui": "^3.1.6",
 		"eslint": "^8.43.0",
 		"eslint-config-prettier": "^8.8.0",
-		"eslint-plugin-svelte3": "^4.0.0",
+		"eslint-plugin-svelte": "^2.31.1",
 		"kysely-codegen": "^0.10.1",
 		"postcss": "^8.4.24",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
-		"svelte": "^3.59.2",
+		"svelte": "^4.0",
 		"svelte-check": "^3.4.4",
 		"svelte-dnd-action": "^0.9.22",
 		"svelte-preprocess": "^5.0.4",
