ci: add caching to prettier, edit eslint

--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"test:unit": "vitest",
-		"lint": "prettier --ignore-path ./config/.prettierignore --plugin-search-dir . --check . && eslint --ignore-path ./config/.eslintignore .",
-		"format": "prettier --ignore-path ./config/.prettierignore --plugin-search-dir . --write .",
-		"db:codegen": "kysely-codegen --out-file ./src/lib/types/data.d.ts && prettier --ignore-path ./config/.prettierignore --plugin-search-dir . --write ./src/lib/types/data.d.ts",
+		"lint": "prettier --cache --ignore-path ./config/.prettierignore --plugin-search-dir . --check . && eslint --ignore-path ./config/.eslintignore .",
+		"format": "prettier --cache --ignore-path ./config/.prettierignore --plugin-search-dir . --write .",
+		"db:codegen": "kysely-codegen --out-file ./src/lib/types/data.d.ts && prettier --cache --ignore-path ./config/.prettierignore --plugin-search-dir . --write ./src/lib/types/data.d.ts",
 		"db:migrate": "vite-node ./src/lib/db/migrate-to-latest.ts",
 		"db:migrate:single": "vite-node ./src/lib/db/migrate-to-latest.ts --migration"
 	},
