--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
+		"build:deno": "cross-env BUILD_ENV=deno vite build",
 		"preview": "vite preview",
 		"test": "playwright test",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -21,7 +22,7 @@
 		"@svelteuidev/core": "^0.14.0",
 		"@trpc/client": "^10.34.0",
 		"@trpc/server": "^10.34.0",
-		"better-sqlite3": "^8.4.0",
+		"better-sqlite3": "^8.5.0",
 		"croner": "^6.0.6",
 		"kysely": "^0.26.1",
 		"trpc-sveltekit": "^3.5.17",
@@ -30,10 +31,10 @@
 		"zod": "^3.21.4"
 	},
 	"devDependencies": {
-		"@commitlint/cli": "^17.6.6",
-		"@commitlint/config-conventional": "^17.6.6",
-		"@iconify-json/lucide": "^1.1.109",
-		"@ngneat/falso": "^7.0.0",
+		"@commitlint/cli": "^17.6.7",
+		"@commitlint/config-conventional": "^17.6.7",
+		"@iconify-json/lucide": "^1.1.111",
+		"@ngneat/falso": "^7.0.1",
 		"@playwright/test": "^1.36.1",
 		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.22.3",
@@ -43,6 +44,7 @@
 		"@typescript-eslint/parser": "^6.1.0",
 		"@vite-pwa/sveltekit": "^0.2.5",
 		"autoprefixer": "^10.4.14",
+		"cross-env": "^7.0.3",
 		"daisyui": "^3.2.1",
 		"eslint": "^8.45.0",
 		"eslint-config-prettier": "^8.8.0",
@@ -53,10 +55,11 @@
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
 		"prettier-plugin-tailwindcss": "^0.4.1",
-		"svelte": "^4.0.5",
+		"svelte": "^4.1.0",
 		"svelte-check": "^3.4.6",
 		"svelte-dnd-action": "^0.9.24",
 		"svelte-preprocess": "^5.0.4",
+		"sveltekit-adapter-deno": "^0.10.2",
 		"tailwindcss": "^3.3.3",
 		"tslib": "^2.6.0",
 		"typescript": "^5.1.6",
