--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"better-sqlite3": "^8.5.0",
 		"croner": "^6.0.6",
 		"kysely": "^0.26.1",
+		"superjson": "^1.13.1",
 		"trpc-sveltekit": "^3.5.17",
 		"tslog": "^4.8.2",
 		"vite-node": "^0.33.0",
