chore: test improvements

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -4,6 +4,7 @@ pre-commit:
     format:
       run: pnpm exec prettier --cache --ignore-path ./config/.prettierignore --write {staged_files} && git add {staged_files}
     test:
+      glob: '*.{ts,svelte}'
       run: npx vitest --run --silent
 
 commit-msg:
