--- a/package.json
+++ b/package.json
@@ -20,52 +20,52 @@
 	"dependencies": {
 		"@svelteuidev/composables": "^0.14.0",
 		"@svelteuidev/core": "^0.14.0",
-		"@trpc/client": "^10.35.0",
-		"@trpc/server": "^10.35.0",
+		"@trpc/client": "^10.37.1",
+		"@trpc/server": "^10.37.1",
 		"better-sqlite3": "^8.5.0",
 		"croner": "^6.0.7",
 		"devalue": "^4.3.2",
 		"kysely": "^0.26.1",
-		"trpc-sveltekit": "^3.5.18",
-		"tslog": "^4.8.2",
+		"trpc-sveltekit": "^3.5.20",
+		"tslog": "4.8.2",
 		"vite-node": "^0.33.0",
 		"zod": "^3.21.4"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^17.6.7",
 		"@commitlint/config-conventional": "^17.6.7",
-		"@iconify-json/lucide": "^1.1.113",
+		"@iconify-json/lucide": "^1.1.115",
 		"@ngneat/falso": "^7.0.1",
 		"@playwright/test": "^1.36.2",
 		"@sveltejs/adapter-node": "^1.3.1",
-		"@sveltejs/kit": "^1.22.3",
+		"@sveltejs/kit": "^1.22.4",
 		"@types/better-sqlite3": "^7.6.4",
-		"@types/node": "^20.4.5",
-		"@typescript-eslint/eslint-plugin": "^6.2.0",
-		"@typescript-eslint/parser": "^6.2.0",
+		"@types/node": "^20.4.8",
+		"@typescript-eslint/eslint-plugin": "^6.2.1",
+		"@typescript-eslint/parser": "^6.2.1",
 		"@vite-pwa/sveltekit": "^0.2.5",
 		"autoprefixer": "^10.4.14",
 		"cross-env": "^7.0.3",
-		"daisyui": "^3.5.0",
-		"eslint": "^8.45.0",
-		"eslint-config-prettier": "^8.9.0",
+		"daisyui": "^3.5.1",
+		"eslint": "^8.46.0",
+		"eslint-config-prettier": "^8.10.0",
 		"eslint-plugin-svelte": "^2.32.4",
 		"kysely-codegen": "^0.10.1",
 		"postcss": "^8.4.27",
 		"postcss-load-config": "^4.0.1",
-		"prettier": "^3.0.0",
-		"prettier-plugin-svelte": "^3.0.2",
+		"prettier": "^3.0.1",
+		"prettier-plugin-svelte": "^3.0.3",
 		"prettier-plugin-tailwindcss": "^0.4.1",
-		"svelte": "^4.1.1",
+		"svelte": "^4.1.2",
 		"svelte-check": "^3.4.6",
 		"svelte-dnd-action": "^0.9.24",
 		"svelte-preprocess": "^5.0.4",
-		"sveltekit-adapter-deno": "^0.10.2",
+		"sveltekit-adapter-deno": "github:dbushell/sveltekit-adapter-deno#main",
 		"tailwindcss": "^3.3.3",
 		"tslib": "^2.6.1",
 		"typescript": "^5.1.6",
 		"unplugin-icons": "^0.16.5",
-		"vite": "^4.4.7",
+		"vite": "^4.4.8",
 		"vite-plugin-pwa": "^0.16.4",
 		"vitest": "^0.33.0"
 	},
