--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
 		"kysely": "^0.26.1",
 		"trpc-sveltekit": "^3.5.20",
 		"tslog": "4.8.2",
-		"vite-node": "^0.33.0",
+		"vite-node": "^0.34.1",
 		"zod": "^3.21.4"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^17.6.7",
 		"@commitlint/config-conventional": "^17.6.7",
-		"@iconify-json/lucide": "^1.1.115",
+		"@iconify-json/lucide": "^1.1.116",
 		"@ngneat/falso": "^7.0.1",
 		"@playwright/test": "^1.36.2",
 		"@sveltejs/adapter-node": "^1.3.1",
@@ -60,14 +60,14 @@
 		"svelte-check": "^3.4.6",
 		"svelte-dnd-action": "^0.9.24",
 		"svelte-preprocess": "^5.0.4",
-		"sveltekit-adapter-deno": "github:dbushell/sveltekit-adapter-deno#main",
+		"sveltekit-adapter-deno": "^0.11.2",
 		"tailwindcss": "^3.3.3",
 		"tslib": "^2.6.1",
 		"typescript": "^5.1.6",
 		"unplugin-icons": "^0.16.5",
 		"vite": "^4.4.8",
 		"vite-plugin-pwa": "^0.16.4",
-		"vitest": "^0.33.0"
+		"vitest": "^0.34.1"
 	},
 	"type": "module",
 	"eslintConfig": {
