chore: upgrade deps. change some configs around

--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
 		"build": "vite build",
 		"build:deno": "cross-env BUILD_ENV=deno vite build",
 		"preview": "vite preview",
-		"test": "playwright test",
+		"test:e2e": "playwright test",
+		"test:unit": "vitest",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"test:unit": "vitest",
 		"lint": "prettier --cache --ignore-path ./config/.prettierignore --check . && eslint --ignore-path ./config/.eslintignore .",
 		"format": "prettier --cache --ignore-path ./config/.prettierignore --write .",
 		"db:codegen": "kysely-codegen --out-file ./src/lib/types/data.d.ts && prettier --cache --ignore-path ./config/.prettierignore --write ./src/lib/types/data.d.ts",
@@ -27,27 +27,27 @@
 		"devalue": "^4.3.2",
 		"kysely": "^0.26.1",
 		"trpc-sveltekit": "^3.5.20",
-		"tslog": "^4.8.7",
+		"tslog": "^4.9.1",
 		"vite-node": "^0.34.1",
 		"zod": "^3.21.4"
 	},
 	"devDependencies": {
-		"@commitlint/cli": "^17.6.7",
-		"@commitlint/config-conventional": "^17.6.7",
-		"@iconify-json/lucide": "^1.1.116",
+		"@commitlint/cli": "^17.7.1",
+		"@commitlint/config-conventional": "^17.7.0",
+		"@iconify-json/lucide": "^1.1.117",
 		"@ngneat/falso": "^7.0.1",
-		"@playwright/test": "^1.36.2",
+		"@playwright/test": "^1.37.0",
 		"@sveltejs/adapter-node": "^1.3.1",
-		"@sveltejs/kit": "^1.22.4",
+		"@sveltejs/kit": "^1.22.5",
 		"@types/better-sqlite3": "^7.6.4",
-		"@types/node": "^20.4.8",
+		"@types/node": "^20.4.10",
 		"@typescript-eslint/eslint-plugin": "^6.3.0",
 		"@typescript-eslint/parser": "^6.3.0",
 		"@vite-pwa/sveltekit": "^0.2.5",
 		"autoprefixer": "^10.4.14",
 		"cross-env": "^7.0.3",
 		"daisyui": "^3.5.1",
-		"eslint": "^8.46.0",
+		"eslint": "^8.47.0",
 		"eslint-config-prettier": "^8.10.0",
 		"eslint-plugin-svelte": "^2.32.4",
 		"kysely-codegen": "^0.10.1",
@@ -56,8 +56,8 @@
 		"prettier": "^3.0.1",
 		"prettier-plugin-svelte": "^3.0.3",
 		"prettier-plugin-tailwindcss": "^0.4.1",
-		"svelte": "^4.1.2",
-		"svelte-check": "^3.4.6",
+		"svelte": "^4.2.0",
+		"svelte-check": "^3.5.0",
 		"svelte-dnd-action": "^0.9.24",
 		"svelte-preprocess": "^5.0.4",
 		"sveltekit-adapter-deno": "^0.11.2",
