--- a/lefthook.yml
+++ b/lefthook.yml
@@ -2,7 +2,7 @@ pre-commit:
   parallel: true
   commands:
     format:
-      run: pnpm exec prettier --cache --ignore-path ./config/.prettierignore --write {staged_files} && git add {staged_files}
+      run: pnpm exec prettier --cache --ignore-path ./config/.prettierignore --write "{staged_files}" && git add "{staged_files}"
     test:
       glob: '*.{ts,svelte}'
       run: npx vitest --run --silent
