--- a/package.json
+++ b/package.json
@@ -37,8 +37,9 @@
 		"@iconify-json/lucide": "^1.2.5",
 		"@ngneat/falso": "^7.2.0",
 		"@playwright/test": "^1.47.2",
-		"@sveltejs/adapter-node": "^1.3.1",
-		"@sveltejs/kit": "^1.30.4",
+		"@sveltejs/adapter-node": "^2.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/better-sqlite3": "^7.6.11",
 		"@types/node": "^20.16.6",
 		"@typescript-eslint/eslint-plugin": "^7.18.0",
