chore: move renovate nodenv checks to major

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -17,6 +17,10 @@
 		{
 			matchUpdateTypes: ['major'],
 			dependencyDashboardApproval: true
+		},
+		{
+			matchManagers: ['nodenv'],
+			matchUpdateTypes: ['major']
 		}
 	]
 }
