chore: move renovate nodenv checks to major

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -20,7 +20,9 @@
 		},
 		{
 			matchManagers: ['nodenv'],
-			matchUpdateTypes: ['major']
+			extractVersion: '^(?<version>v\\d+)',
+			rangeStrategy: 'pin',
+			dependencyDashboardApproval: true
 		}
 	]
 }
